<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favourite">Favourite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">City</string>
    <string name="weatherdescription">"Weather Description "</string>
    <string name="tes">20</string>
    <string name="windspeed">Wind Speed</string>
    <string name="sunrise">"06:00 AM "</string>
    <string name="sunr">"Sunrise "</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="humidity">Humidity</string>
    <string name="sunset">06:00PM</string>
    <string name="suns">"Sunset "</string>
    <string name="title_settings">Settings</string>
    <string name="unitsofmeasurment">Units of measurement</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="tempunit">Temp Unit</string>
    <string name="windunit">Wind Speed Unit</string>
    <string name="celsius">C</string>
    <string name="fahrenheit">F</string>
    <string name="kelvin">K</string>
    <string name="meterpersec">m/s</string>
    <string name="mileperhou">MPH</string>
    <string name="hpa">hpa</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="select">Select</string>
    <string name="display"><![CDATA[>]]></string>
    <string name="back"><![CDATA[<]]></string>
    <string name="notifyat">notify at</string>
    <string name="notifyby">Notify Me By\n</string>
    <string name="nottime">Notification time</string>
    <string name="notfor">Notification For</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="nointernet"><![CDATA[No Internet Connection \n Please Connect & Retry]]></string>
    <string name="nointer">No Internet</string>
    <string name="x">x</string>

    <string-array name="languagesoptions">
        <item>Arabic</item>
        <item>English</item>
        <item>Device Language</item>
    </string-array>

    <string-array name="languagesvalues">
        <item>0</item> <!-- Arabic -->
        <item>1</item> <!-- English -->
        <item>2</item>
    </string-array>

    <string-array name="tempoptions">
        <item>Celsius </item>
        <item>Fahrenheit</item>
        <item>kelvin</item>
    </string-array>

    <string-array name="tempvalues">
        <item>0</item> <!-- Celsius -->
        <item>1</item> <!-- Fahrenheit -->
        <item>2</item> <!-- kelvin -->
    </string-array>

    <string-array name="windoptions">
        <item>meter/sec </item>
        <item>miles/hour</item>
    </string-array>

    <string-array name="windvalues">
        <item>0</item> <!--meter/sec -->
        <item>1</item> <!-- miles/hour -->
    </string-array>

    <string-array name="locationoptions">
        <item>GPS </item>
        <item>Map</item>
    </string-array>

    <string-array name="locationvalues">
        <item>0</item> <!--GPS -->
        <item>1</item> <!-- map -->
    </string-array>
</resources>